Details
-
Bug
-
Resolution: Fixed
-
Major
-
3.0-Beta, 3.0, 3.0.1, 3.0.2
-
Security Level: Public
-
Platform = Physical
OS = CentOS 6.5
CPU = Intel Xeon E5-2630 (24 vCPU)
Memory = 64 GB
Disk = RAID 10 HDD
-
Triaged
-
Yes
Description
Running the "standard sales" demo that puts a 50/50 workload of about 80k ops/sec across 4 nodes of m1.xlarge, 1 bucket 1 replica.
The "intra-cluster replication" value grows into the many k's.
This is a value that our users look rather closely at to determine the "safety" of their replication status. A reasonable number on 2.x has always been below 1k but I think we need to reproduce and set appropriate baselines for ourselves with 3.0.
Assigning to Pavel as it falls into the performance area and we would likely be best served if this behavior was reproduced and tracked.
Attachments
Issue Links
- blocks
-
MB-17211 4.1.1 Minor Release
-
- Closed
-
- relates to
-
MB-11643 Incoming workload suffers when XDCR enabled
-
- Resolved
-
-
MB-11640 Provide ability to set the DCP stream priority (low/high)
-
- Resolved
-
-
MB-11675 20-30% performance degradation on append-heavy workload compared to 2.5.1
-
- Closed
-
-
MB-11984 Intra-cluster replication slows down during intensive ejection
-
- Closed
-
- mentioned in
-
Page Loading...