MB-11642 Batch load dcp mutations if replication

Instead of loading 1 mutation per vbucket send out 10
dcp mutations per dcp step() if it is a intra-cluster
replication stream.
This is done so that intra-cluster replication is always
faster than XDCR and views.
Noticeable  improvement seen in intra-cluster replication
Change-Id: I15fc0081852e8e11027a20febe3224acdf21b661
Reviewed-on: http://review.couchbase.org/40392
Reviewed-by: Chiyoung Seo <chiyoung@couchbase.com>
Tested-by: Sundararaman Sridharan <sundar@couchbase.com>