src/upr-producer.h
@@ -25,6 +25,13 @@
 
 class UprResponse;
 
+typedef enum {
+    DCP_REPLICA_STREAM,
+    DCP_XDCR_STREAM,
+    DCP_VIEWS_STREAM,
+    DCP_UNKNOWN_STREAM
+} dcp_stream_type_t;
+
 class BufferLog {
 public:
     BufferLog(uint32_t bytes)
@@ -148,6 +155,9 @@ private:
         bool pendingRecv;
         bool enabled;
     } noopCtx;
+
+    UprResponse *rejectResp; // stash response for retry if E2BIG was hit
+    dcp_stream_type_t streamType;
 
     bool notifyOnly;
     rel_time_t lastSendTime;
